force-app/main/default/objects/ZP_Company_Suspension__c/ZP_Company_Suspension__c.object-meta.xml
<CustomObject>
    <label>ZP Company Suspension</label>
    <nameField>
        <displayFormat>COMPANY-SUSPENSION-{000000000}</displayFormat>
        <label>ZP Company Suspensions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZP Company Suspensions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>