force-app/main/default/objects/ZP_Company_Suspension__c/fields/Kafka_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Kafka_Timestamp__c</fullName>
    <description>Field used by integration to calculate SLA.</description>
    <label>Kafka Timestamp</label>
    <type>DateTime</type>
</CustomField>