force-app/main/default/objects/ZP_Company_Suspension__c/fields/Mulesoft_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Job_Id__c</fullName>
    <description>Holds Mulesoft Job Id.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Mulesoft Job Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>