force-app/main/default/objects/ZP_Company_Suspension__c/fields/Reconcile_Tax_Method__c.field-meta.xml
<CustomField>
    <fullName>Reconcile_Tax_Method__c</fullName>
    <label>Reconcile Tax Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>