force-app/main/default/objects/ZP_Company_Suspension__c/fields/Suspended_At__c.field-meta.xml
<CustomField>
    <fullName>Suspended_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suspended At</label>
    <type>Date</type>
</CustomField>